# Dll-replace-demo

./: .gitignore  CMakeLists.txt  HS.cpp  README.md  SC.cpp  build.bat  clean.bat  main.cpp  run.bat  utils.cmake.bak
Include/: HS.h  LoadDllBase.h  LogFunc.h  SC.h  data_def.h  dbg.h  empty.cpp  sc_interface.h  t2sdk_interface.h
config/: Hsconfig.ini
include/: HS.h  LoadDllBase.h  LogFunc.h  SC.h  dbg.h  empty.cpp
